Feature/auth apis : Login and Signup for Students and Teachers  (#3)
* [feat/teacher_auth] : Teacher Authentication with mail verification
* [feat/student_auth]: Student Authentication with mail verification
