# apis/urls.py
@@ -18,8 +18,10 @@ from django.urls import path
 from .views import views_auth, views_student, views_teacher
 
 urlpatterns = [
-    # path("teacher/login", views_auth.teacher_login),
-    # path("teacher/register", views_auth.teacher_registeration),
-    # path("student/login", views_auth.student_login),
-    # path("student/register", views_auth.student_registeration),
+    path("teacher/login", views_auth.teacher_login),
+    path("teacher/register", views_auth.teacher_registeration),
+    path("teacher/verify/<secret_code>/<teacher_id>", views_auth.teacher_verify_email),
+    path("student/login", views_auth.student_login),
+    path("student/register", views_auth.student_registeration),
+    path("student/verify/<secret_code>/<student_id>", views_auth.student_verify_email),
 ]
